# cubble

./: .clang-format  .clang-tidy  .clangd  .cproject  .gitignore  .gitmodules  .nvim_sync_config.json  .project  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  array.params  array_parameters.json  array_run_dont_use_directly.sh  cuda_bubble.code-workspace  cuda_bubble.sh  input_parameters.json  input_parameters_new.json  kysymyksia.txt  makefile  multiple_runs.sh  optimizations.prof  output_parameters.json  todo.txt  virtaustekstuuri.txt
data/: data.json  input_data.json  output.json  save.json
debug/: makefile
default/: makefile
external_dependencies/nlohmann/: json.hpp
external_dependencies/nlohmann/detail/meta/: type_traits.hpp
final/: makefile  snapshot.csv.10  snapshot.csv.11  snapshot.csv.12  snapshot.csv.8  snapshot.csv.9
multiple_runs_data/: multiple_runs_params.txt  params.txt
scripts/: array_job.py  array_job_dont_use_this_directly.sh  array_run_dont_use_directly.sh  bash_multi_job.sh  binned_energy.py  bubble_2d_plot.py  build.sh  convert_csv_to_vtu.py  create_venv.py  cuda_bubble.sh  data_plot.py  distance_plot.py  energy_plot.py  gas_exchange.py  generate_input_jsons.py  generate_multiple_data.sh  global_distribution.py  grid_plot_2d.py  interactive_gpu_run.sh  multiple_runs.sh  pairwise_domain_division.py  plot_bubbles.py  ranges.py  sbatch_single_job.sh  set_up_venv.sh  snapshot_averager.py
scripts/analysis/: coarsening_gradient.py  funcs.py  load.py  parameter_profile.py  parameter_profile_whole_run.py  readme.txt  show.py  single_snapshot.py
scripts/create_venv/: create_venv.py  set_up_venv.sh
scripts/paraview/: convert_csv_to_vtu.py  manual_conversion.sh
scripts/paraview/create_venv/: requirements.txt
scripts/paraview/paraview_savestate/: convert_to_stateformat.py  paraview_snapshot.python_template
scripts/triton/: array_job.py  compile.sh  interactive_gpu_run.sh  run.sh  run2.sh  salloc.txt  sbatch_single_job.sh
src/: Bubble.cpp  Bubble.h  BubbleKernels.cu  BubbleKernels.cuh  BubbleManager.cpp  BubbleManager.h  CMakeLists.txt  Cell.cpp  Cell.h  CubWrapper.h  CubbleApp.cpp  CubbleApp.h  CudaContainer.h  CudaKernelWrapper.cu  CudaKernelWrapper.h  CudaKernelsWrapper.cu  CudaKernelsWrapper.h  DataDefinitions.h  DeviceArray.h  DeviceMemoryHandler.cpp  DeviceMemoryHandler.h  Env.h  Fileio.h  FixedSizeDeviceArray.h  Globals.h  IOUtils.h  IntegrationKernels.cu  IntegrationKernels.cuh  Integrator.cpp  Integrator.h  KernelWrapper.h  Kernels.cu  Kernels.cuh  Kernels.h  Macros.h  Main.cpp  PinnedHostArray.h  SimulationProperties.h  Simulator.cpp  Simulator.cu  (+42 more)
tests/: CMakeLists.txt  first_test.cpp  second_test.cpp
tests/testdata/: readme.md
